--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -47,7 +47,7 @@
                 <p id="length" class="invalid">Be at least <strong>8 characters</strong></p>
        
         </div>
-        <p>Or log in <a href="/" role="button" class="btn btn-outline-primary btn-sm">here</a></p>
+        <p>Or log in <a id="here" href="/" role="button" class="btn btn-outline-primary btn-sm">here</a></p>
       </div>
     </div>
   </div>
