navbar color changed

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -142,8 +142,7 @@ select:-webkit-autofill:focus {
 }
 
 .navbarTitle{
-  background-color: #fff;
-  color:  #646464;
+   color: white;
 }
 
 .projectCard{
