--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div id="test"></div>
-<nav class="navbar navbarTitle">
+<nav class="navbar  bg-dark navbarTitle">
   {{!-- Elvan --}}
   <p id="userNameBanner" class="navbar-brand"></p>
   {{!-- Elvan added id="userNameBaner" --}}
