Additions of Categories and Tasks working now.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -423,4 +423,15 @@ img {
   overflow-y: auto;
 }
 
-  
+
+/* Style Elvan ==============================================*/
+
+.noMargin {
+  margin-left:0;
+  /* margin-right:0; */
+}
+
+.form-control {
+  margin-left:0;
+  /* margin-right:0; */
+}
