--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,6 @@
-<div id="test"></div>
+<h1>{{ hdbrs.task_id }}</h1>
+{{!-- <button id='testbutton'>Test</button>
+<div id="test"></div> --}}
 <nav class="navbar  bg-dark navbarTitle">
   {{!-- Elvan --}}
   <p id="userNameBanner" class="navbar-brand"></p>
@@ -66,7 +68,7 @@
 
           <div class="form-group">
             <label for="projectUsers">Add Users</label>
-            <div class='row'>
+            <div class='row noMargin'>
               <select class="form-control col-md-6 usersAvailables" id="projectUsers" type="list">
               </select>
               <button class='btn btn-outline-success' id='addUser'>Add</button>
@@ -89,7 +91,7 @@
   </div>
 </div>
 <!--New Category Modal-->
-<div class="modal" tabindex="-1" role="dialog" id="categoryModalAdd">
+<div class="modal" tabindex="-1" role="dialog" id="categoryModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content bg-dark text-white">
       <div class="modal-header">
@@ -104,12 +106,10 @@
             <label for="categoryName">Category name</label>
             <input type="text" class="form-control" id="categoryName" placeholder="Task group name">
           </div>
-
           <div class="form-group">
             <label for="categoryDesc">Category Description</label>
             <textarea type="text" class="form-control" id="categoryDesc" rows="3"></textarea>
           </div>
-
         </form>
       </div>
       <div class="modal-footer">
@@ -120,280 +120,33 @@
     </div>
   </div>
 </div>
-<!--Category Card Modal-->
-<div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" id="categoryModal">
-  <div class="modal-dialog modal-xl" role="document">
-    <div class="modal-content bg-dark">
+<!--Successfully added category-->
+<div class="modal" tabindex="-1" role="dialog" id="categorySuccessModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content bg-dark text-white">
       <div class="modal-header">
-        <h5 class="modal-title text-white">Tasks</h5>
-        <button class='btn btn-secondary' style='float: right;margin-left: 5vh' data-toggle="collapse"
-          href="#collapseExample8" role="button" aria-expanded="false" aria-controls="collapseExample8"><i
-            class="fa fa-plus fa-4" aria-hidden="true"></i></button>
+        <h5 id="categoryAddMessage" class="modal-title"></h5>
         <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-
-
-      <div class="collapse" id="collapseExample8" style='margin:auto; width: 50vh'>
-
-        <div class="card card-body bg-dark text-white">
-          <form>
-            <div class="form-group">
-              <label for="projectName">New Task Name</label>
-              <input type="text" class="form-control" id="ProjectName" placeholder="Project Name">
-            </div>
-
-            <div class="form-group">
-              <label for="projectDesc">New Task Description</label>
-              <textarea type="text" class="form-control" id="projectDesc" rows="3"></textarea>
-            </div>
-
-            <div class="form-group">
-              <label for="deadline">Deadline</label>
-              <input class='form-control' type="date" name="deadline">
-              <button class='btn btn btn-outline-success' type="submit" id='addTask'>Add task!</button>
-            </div>
-
-          </form>
-        </div>
-      </div>
       <div class="modal-body">
-
-        <div class="card bg-secondary text-white task" style='margin:5px'>
-          <div class="card-body">
-            <button class='btn btn-secondary' style='float: right;margin:0 2px' data-toggle="collapse"
-              href="#collapseExample6" role="button" aria-expanded="false" aria-controls="collapseExample6"><i
-                class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
-            <button class='btn btn-secondary' data-toggle="collapse" href="#collapseExample5" role="button"
-              aria-expanded="false" aria-controls="collapseExample5" style='float: right; margin:0 2px'><i
-                class="fa fa-pencil fa-4" aria-hidden="true"></i></button>
-
-            <div class="collapse" id="collapseExample5">
-              <div class='card card-title bg-secondary h4'>Edit Task</div>
-              <div class="card card-body bg-dark">
-                <form>
-
-                  <div class="form-group col-md-4">
-                    <label for="formGroupExampleInput">New Name</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"
-                      value='Task 1'>
-                  </div>
-                  <div class="form-group col-md-4">
-                    <label for="formGroupExampleInput2">Add Users</label>
-                    <select type="list" id="inputState" class="form-control">
-                    </select></div>
-
-                  <div class="form-group col-md-4">
-                    <label for="inputState">Delete User</label>
-                    <select type="list" id="inputState" class="form-control">
-                      <option>Elvan López</option>
-                      <option> Ignacio Gaxiola</option>
-                      <option> Manuel Castillo</option>
-                    </select>
-                  </div>
-
-                </form>
-              </div>
-            </div>
-
-
-
-            <div class="collapse" id="collapseExample6">
-              <div class='card card-title bg-secondary h4'>Are you sure you want to delete</div>
-              <div class="card-body bg-dark" style="text-align: right">
-                <button class='btn btn-outline-danger'>Cancel</button>
-                <button class='btn btn-outline-success'>Yes</button>
-              </div>
-            </div>
-
-
-
-
-            <h5 class="card-title">Task 1</h5>
-            <h6 class='text-danger font-weight-bold'>Deadline 04/04/19</h6>
-            <h6 class="card-subtitle mb-2 text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vitae
-              semper augue. Pellentesque interdum vehicula leo et pharetra. </h6>
-            <h6>Progress:</h6>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100"></div>
-            </div>
-            <label for="numberof-input">% of progress</label>
-            <div class='row' style="margin:auto">
-              <button class='btn btn-success pplus'><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
-              <input type="text" value="0" id="total" class="field left form-control col-sm-1 text-dark" readonly=""
-                style='margin:5px'>
-              <button class='btn btn-success pminus'><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
-            </div>
-            <div class="card bg-dark text-white task" style='margin:5px'>
-              <div class="card-body">
-                <ul class="nav nav-tabs nav-pills card-title">
-                  <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#multiCollapseExample1" role="button"
-                      aria-expanded="false" aria-controls="multiCollapseExample1">Users</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#multiCollapseExample2" role="button"
-                      aria-expanded="false" aria-controls="multiCollapseExample2">Chat</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#multiCollapseExample3" role="button"
-                      aria-expanded="false" aria-controls="multiCollapseExample3">New Email</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#multiCollapseExample4" role="button"
-                      aria-expanded="false" aria-controls="multiCollapseExample4">Email History</a>
-                  </li>
-                </ul>
-                <!--  BODY USERS-->
-                <div class="collapse" id="multiCollapseExample1">
-                  <div class="card card-body bg-dark">
-                    <h6>Users: </h6>
-                    <ul>
-                      <li>Nacho</li>
-                      <li>Manu</li>
-                      <li>Elvan</li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class="collapse" id="multiCollapseExample2">
-                  <div class="card card-body bg-dark">
-                    <div class="mesgs overflow-auto">
-                      <div class="msg_history">
-                        <div class="incoming_msg">
-                          <div class="incoming_msg_img"> <img src="https://dummyimage.com/250/4aaaa5/000000&text=IG"
-                              alt="sunil"> </div>
-                          <div class="received_msg">
-                            <div class="received_withd_msg">
-                              <p>Test which is a new approach to have all
-                                solutions</p>
-                              <span class="time_date"> 11:01 AM | June 9</span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="outgoing_msg">
-                          <div class="sent_msg">
-                            <p>Test which is a new approach to have all
-                              solutions</p>
-                            <span class="time_date"> 11:01 AM | June 9</span>
-                          </div>
-                        </div>
-                        <div class="incoming_msg">
-                          <div class="incoming_msg_img"> <img src="https://dummyimage.com/250/4aaaa5/000000&text=EG"
-                              alt="sunil"> </div>
-                          <div class="received_msg">
-                            <div class="received_withd_msg">
-                              <p>Test, which is a new approach to have</p>
-                              <span class="time_date"> 11:01 AM | Yesterday</span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="outgoing_msg">
-                          <div class="sent_msg">
-                            <p>Apollo University, Delhi, India Test</p>
-                            <span class="time_date"> 11:01 AM | Today</span>
-                          </div>
-                        </div>
-                        <div class="incoming_msg">
-                          <div class="incoming_msg_img"> <img src="https://dummyimage.com/250/4aaaa5/000000&text=MC"
-                              alt="sunil"> </div>
-                          <div class="received_msg">
-                            <div class="received_withd_msg">
-                              <p>We work directly with our designers and suppliers,
-                                and sell direct to you, which means quality, exclusive
-                                products, at a price anyone can afford.</p>
-                              <span class="time_date"> 11:01 AM | Today</span>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="type_msg">
-                      <div class="input_msg_write">
-                        <input type="text" class="write_msg" placeholder="Type a message">
-                        <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o"
-                            aria-hidden="true"></i></button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="collapse" id="multiCollapseExample3">
-                  <div class="card card-body bg-dark">
-                    <div class='container'>
-                      <form>
-                        <div class="form-group">
-                          <label for="exampleFormControlInput1">Email address</label>
-                          <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="exampleFormControlInput1">Subject</label>
-                          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="exampleFormControlTextarea1">Example textarea</label>
-                          <textarea type="text" class="form-control" id="exampleFormControlTextarea1"
-                            rows="3"></textarea>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="collapse" id="multiCollapseExample4">
-                  <div class="card card-body bg-dark">
-                    <div class='container'>
-                      <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">List group item heading</h5>
-                            <small>3 days ago</small>
-                          </div>
-                          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus
-                            varius blandit.</p>
-                          <small>Donec id elit non mi porta.</small>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">List group item heading</h5>
-                            <small class="text-muted">3 days ago</small>
-                          </div>
-                          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus
-                            varius blandit.</p>
-                          <small class="text-muted">Donec id elit non mi porta.</small>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">List group item heading</h5>
-                            <small class="text-muted">3 days ago</small>
-                          </div>
-                          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus
-                            varius blandit.</p>
-                          <small class="text-muted">Donec id elit non mi porta.</small>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+        <form>
+          <div class="form-group">
+            <label><b>Note:</b></label>
+            <p>This addition will add a new Category to the database.<br>
+              It will just be available at Task creation time to relate that<br>
+              task to the Category created here (or any other one existing).<br>
+              <b>It will not be displayed here</b> until there is a Task for a Project<br>
+              releted to the logged User that belongs to the newly created Category.</p>
           </div>
-        </div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn btn-outline-danger" data-dismiss="modal">Close</button>
+        </form>
       </div>
     </div>
   </div>
 </div>
 
+{{> task-modal taskId=task_id }}
 
 <!--Jumbotron Cards-->
 <div class="jumbotron bg-secondary " style='background-color: #aaa;height: 100%'>
@@ -461,17 +214,3 @@
     </div>
   </div>
 </div>
-
-{{!-- Nacho ===================================================== --}}
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-<script src="js/app.js"></script>
-<script src="js/members.js"></script>
