Prepending tasks in modal and reseting the Task addition window.

--- a/views/partials/task-modal.handlebars
+++ b/views/partials/task-modal.handlebars
@@ -53,7 +53,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button class="btn btn-outline-success" id='addTask' data-dismiss="modal">Add task!</button>
+            <button class="btn btn-outline-success" id='addTask' >Add task!</button>
           </div>
         </div>
       </div>
