Changing seeds to make sense. Adding Task editing functionality but still work to be done to input on Daba Base.

--- a/views/partials/task-modal.handlebars
+++ b/views/partials/task-modal.handlebars
@@ -23,17 +23,19 @@
           </div>
           <div class="card card-body bg-dark text-white">
             <form>
-
+              <!--New Task Description-->
               <div class="form-group">
                 <label for="projectDesc">New Task Description</label>
                 <textarea type="text" class="form-control" id="taskDesc" rows="3"></textarea>
               </div>
 
+              <!--New Task Deadline-->
               <div class="form-group">
                 <label for="deadline">Deadline</label>
                 <input class='form-control' type="date" name="deadline" id="taskDeadline">
               </div>
 
+              <!--New Task Users addition-->
               <div class="form-group">
                 <label for="taskUsers">Add Users</label>
                 <div class='row noMargin'>
@@ -43,11 +45,10 @@
                   <button class='btn btn btn-outline-danger' id='delTaskUser'>Delete</button>
                 </div>
               </div>
+              <!--New Task Users added-->
               <h5 class="modal-title">Users Added: </h5>
-              {{!-- Elvan --}}
               <ul id="taskUserList" class='list-group'>
-                {{!-- Elvan id="userList" --}}
-                {{!-- <li class='userProject' id='1'>User 1</li> --}}
+                <!--to be filled-->
               </ul>
 
             </form>
