Functionality for Category display changed to allow all Cateogories to be showcased on Project Card click instead of just the ones used by that particular Project. That facilitaes Tasks creation. An indicator at the top left will show the number of Tasks contained by that Category and the selected Project.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -145,7 +145,7 @@ select:-webkit-autofill:focus {
    color: white;
 }
 
-.projectCard{
+.projectCard, .categoryCard{
   margin:auto;
   min-width: 160px;
 color: #fff;
