--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,3 @@
-<h1>{{ hdbrs.task_id }}</h1>
-{{!-- <button id='testbutton'>Test</button>
-<div id="test"></div> --}}
 <nav class="navbar  bg-dark navbarTitle">
   {{!-- Elvan --}}
   <p id="userNameBanner" class="navbar-brand"></p>
@@ -134,11 +131,13 @@
         <form>
           <div class="form-group">
             <label><b>Note:</b></label>
-            <p>This addition will add a new Category to the database.<br>
-              It will just be available at Task creation time to relate that<br>
-              task to the Category created here (or any other one existing).<br>
-              <b>It will not be displayed here</b> until there is a Task for a Project<br>
-              releted to the logged User that belongs to the newly created Category.</p>
+            <p>
+              This addition will make availabe a new <br>
+              Category to the database.<br>
+              Once you click on a Project it will be<br>
+              shown here with no related Tasks yet, but<br>
+              you can start adding them whenever needed.<br>
+            </p>
           </div>
         </form>
       </div>
@@ -197,7 +196,7 @@
           </div>
           <div class="card-body bg-dark overflow-auto" id='categoryBody' style="height: 60vh">
             <!--Categories Card Inside-->
-            <div id="categoryDiv">
+            <div id="categoryDiv" class="card-columns row">
               {{!-- Manuel --}}
               {{!-- <div class="card bg-secondary text-white categoryCard" style='margin:5px' data-id="5">
               <div class="card-body">
