--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,6 +41,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+{{!-- <script src="https://kit.fontawesome.com/5d79565e6d.js"></script> --}}
 
 <!-- Optional JavaScript -->
 <script src="js/app.js"></script>
