--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -155,7 +155,7 @@
       <div class='row ' style='margin:5px;'>
         <div class='card bg-dark text-white' style="width:100rem; max-height: 60vh; height: 60vh">
           <div class="card-header">
-            <span class='display-4'>Projects </span>
+            <span class='display-3'><b>Projects</b></span>
             <button class='btn btn-secondary  projectDel' style='float: right;margin:0 2px'><i
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
             <button id="projectAddButton" class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i
@@ -191,8 +191,8 @@
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
             <button class='btn btn-secondary categoryAdd' style='float: right;margin:0 2px'><i class="fa fa-plus fa-4"
                 aria-hidden="true"></i></button>
-            <h3 class='display-4'>Categories</h3>
-            <h5 class='display-3'><span id='forProject'></span></h4>
+            <span class='display-3'><b>Categories</b></span>
+            {{!-- <h3 class='display-2'>asdf<span id='forProject'></span></h4> --}}
           </div>
           <div class="card-body bg-dark overflow-auto" id='categoryBody' style="height: 60vh">
             <!--Categories Card Inside-->
