Tweaking more stuff.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -148,7 +148,7 @@
 {{> task-modal taskId=task_id }}
 
 <!--Jumbotron Cards-->
-<div class="jumbotron bg-secondary " style='background-color: #aaa;height: 100%'>
+<div class="jumbotron bg-secondary " style='background-color: #aaa'>
   <div class='row'>
     <!--Projects Card Side-->
     <div class="col-sm-6">
