--- a/views/partials/task-modal.handlebars
+++ b/views/partials/task-modal.handlebars
@@ -4,7 +4,7 @@
     <div class="modal-content bg-dark">
       <div class="modal-header">
         <h5 class="modal-title text-white"></h5>
-        <button id="addTaskModal" class='btn btn-secondary' style='float: right;margin-left: 5vh' data-toggle="collapse"
+        <button id="addTaskModal" class='btn btn-secondary' style='float: right' data-toggle="collapse"
           href="#addTaskCollapsWindow" role="button" aria-expanded="false" aria-controls="addTaskCollapsWindow"><i
             class="fa fa-plus fa-4" aria-hidden="true"></i></button>
         <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
