--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,14 +12,17 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content bg-dark text-white">
       <div class="modal-header">
-        <h5 class="modal-title">Are you sure you want to delete?</h5>
+        <h5 class="modal-title" id="eraseProjModalTitle">
+          Are you sure you want to delete?
+          </h5>
         <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-success" data-dismiss="modal" id='deleteProject'>Yes</button>
-        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-outline-success" data-dismiss="modal" id='deleteProject'>
+          Erase Project's Tasks
+        </button>
       </div>
     </div>
   </div>
@@ -29,14 +32,17 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content bg-dark text-white">
       <div class="modal-header">
-        <h5 class="modal-title">Are you sure you want to delete?</h5>
+        <h5 class="modal-title" id="eraseCatModalTitle">
+
+        </h5>
         <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-success" data-dismiss="modal" id='deleteCategory'>Yes</button>
-        <button type="button" class="btn btn btn-outline-danger" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-outline-success" data-dismiss="modal" id='deleteCategory'>
+          Erase Category's Tasks
+        </button>
       </div>
     </div>
   </div>
@@ -187,10 +193,10 @@
       <div class='row' style='margin:5px;'>
         <div class="card bg-dark text-white" style="width:100rem; max-height: 60vh; height: 60vh">
           <div class="card-header">
-            <button class='btn btn-secondary categoryDel' style='float: right;margin:0 2px'><i
+            <button class='btn btn-secondary' id='categoryDel' style='float: right;margin:0 2px'><i
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
-            <button class='btn btn-secondary categoryAdd' style='float: right;margin:0 2px'><i class="fa fa-plus fa-4"
-                aria-hidden="true"></i></button>
+            <button class='btn btn-secondary' id='categoryAdd' style='float: right;margin:0 2px'><i
+                class="fa fa-plus fa-4" aria-hidden="true"></i></button>
             <span class='display-3'><b>Categories</b></span>
             {{!-- <h3 class='display-2'>asdf<span id='forProject'></span></h4> --}}
           </div>
