--- a/client/public/styles/styles.css
+++ b/client/public/styles/styles.css
@@ -74,7 +74,7 @@ body, #root, #profile {
   display: block
 }
 
-input[type=email], input[type=password], input[type=text], input[type=tel], textarea[type=text], select[type=list] {
+input[type=date], input[type=email], input[type=password], input[type=text], input[type=tel], textarea[type=text], select[type=list] {
   padding: 10px 10px;
   border: 1px solid #d5d9da;
   border-radius: 5px;
@@ -108,7 +108,7 @@ select[type=list]{
 
 
 
-input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, input[type=tel]:focus, textarea[type=text]:focus {
+input[type=date]:focus, input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, input[type=tel]:focus, textarea[type=text]:focus {
   border: 1px solid #b9d4e9;
   border-top-color: #b6d5ea;
   border-bottom-color: #b8d4ea;
@@ -128,6 +128,72 @@ select[type=list]:focus{
 input[type=email]::placeholder, input[type=password]::placeholder, input[type=text]::placeholder, input[type=tel]::placeholder {
   color: #005fc4;
 }
+
+/* input#taskDeadline::-webkit-calendar-picker-indicator { 
+  display: none ;
+  -webkit-appearance: none;
+}
+
+input#taskDeadline:hover::-webkit-calendar-picker-indicator { 
+  display: none 
+} */
+
+input#taskDeadline[type="date"]::-webkit-inner-spin-button, 
+input#taskDeadline[type="date"]::-webkit-outer-spin-button { 
+  /* -webkit-appearance: none; 
+  margin: 0;  */
+  background: red;
+  color: white;
+}
+/* =======date inout===== */
+
+input#taskDeadline[type="date"] {
+  width: 250px;
+  position: relative;
+}
+/* create a new arrow, because we are going to mess up the native one
+see "List of symbols" below if you want another, you could also try to add a font-awesome icon.. */
+input#taskDeadline[type="date"]:after {
+  content: "\25BC"; 
+  color: #555;
+  /* color: blue; */
+  padding: 0 5px;
+}
+
+/* change color of symbol on hover */
+input#taskDeadline[type="date"]:hover:after {
+  color: white;
+}
+
+/* make the native arrow invisible and stretch it over the whole field so you can click anywhere in the input field to trigger the native datepicker*/
+input#taskDeadline[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  color: transparent;
+  background: transparent;
+}
+
+/* adjust increase/decrease button */
+/* input#taskDeadline[type="date"]::-webkit-inner-spin-button, 
+input#taskDeadline[type="date"]::-webkit-inner-spin-button {
+  z-index: -1;
+  background: transparent;
+  color: transparent;
+} */
+
+/* adjust clear button */
+input#taskDeadline[type="date"]::-webkit-clear-button {
+   z-index: 1;
+}
+
+
+/* =======date inout===== */
+
 
 #here{
   display: inline-block;
