--- a/client/public/styles/styles.css
+++ b/client/public/styles/styles.css
@@ -427,7 +427,7 @@ padding: 0px;
   color: black;
   /* color: #646464; */
   font-size: 14px;
-  margin: 0;
+  margin: 5px;
   padding: 5px 10px 5px 12px;
 }
 
